<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etnombre"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/etNombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditar" />

    <EditText
        android:id="@+id/ettelefono"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/etTelefono"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etfecha" />

    <EditText
        android:id="@+id/etdescripcion"
        android:layout_width="370dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/etDescripcion"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etemail" />

    <EditText
        android:id="@+id/etemail"
        android:layout_width="370dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/etEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ettelefono" />

    <EditText
        android:id="@+id/etfecha"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/etFecha"
        android:importantForAutofill="no"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etnombre" />

    <Button
        android:id="@+id/botton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="guardar"
        android:text="@string/BotonGuadar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginLeft="157dp"
        android:layout_marginTop="4dp"
        android:text="@string/tveditar"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="anadir"
        android:text="@string/botonnew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>